--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fake JSON API Server",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json",
+    "start": "json-server --watch db.json --port 3001",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
